# pruebas

./: .gitignore  CMakeLists.txt  Tiposgenericos.cpp
configurationFiles/: kitti.yaml
utils/: Time.hpp
